--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "lucide-react": "^0.472.0",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
